css/style.css
/* ... */
.navbar-expand-lg .navbar-nav .nav-link.custom-btn,
.navbar-nav .nav-link.custom-btn {
  background: var(--secondary-color);
}

.navbar-expand-lg .navbar-nav .nav-link.custom-btn,
.navbar-nav .nav-link.custom-btn {
  margin-left: 20px;
}

.custom-border-btn {
  background: transparent;
  border: 2px solid var(--primary-color);
  color: var(--primary-color);
}

.custom-btn:hover,
.navbar-expand-lg .navbar-nav .nav-link.custom-btn:hover,
.navbar-nav .nav-link.custom-btn:hover {
  background: var(--primary-color);
  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
  color: var(--white-color);
}

.navbar-collapse{
  background: rgb(16 20 36 / 80%);
  padding: 10px;
  border-radius: 10px;
}


/*---------------------------------------
  NAVIGATION              
-----------------------------------------*/
.sticky-wrapper {
  background: var(--navbar-bg-color);
}

.navbar {
  background: transparent;
  z-index: 9;
  right: 0;
  left: 0;
  transition: all 0.3s;
  padding-top: 15px;
  padding-bottom: 15px;
}

.navbar-float{
  position: absolute !important;
}

.navbar-brand {
  font-size: 20px;
  line-height: 1.2rem;
  font-weight: var(--font-weight-bold);
  color: var(--primary-color);
  text-transform: uppercase;
}

.brand-logo {
  font-size: 38px;
}

.brand-text {
  display: inline-block;
  vertical-align: top;
}

.navbar-expand-lg .navbar-nav .nav-link {
  padding-right: 20px;
  padding-left: 20px;
}

.navbar-nav .nav-link {
  color: var(--white-color);
  font-size: var(--menu-font-size);
  font-weight: var(--font-weight-medium);
  padding-top: 15px;
  padding-bottom: 15px;
}

.navbar-nav .nav-link.active, 
.navbar-nav .nav-link:hover {
  color: var(--primary-color);
}

.navbar-toggler {
  border: 0;
  padding: 0;
  cursor: pointer;
  margin: 0;
  width: 30px;
  height: 35px;
  outline: none;
}

.navbar-toggler:focus {
  outline: none;
  box-shadow: none;
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
  background: transparent;
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before,
.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
  transition: top 300ms 50ms ease, -webkit-transform 300ms 350ms ease;
  transition: top 300ms 50ms ease, transform 300ms 350ms ease;
  transition: top 300ms 50ms ease, transform 300ms 350ms ease, -webkit-transform 300ms 350ms ease;
  top: 0;
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
  transform: rotate(45deg);
}

.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
  transform: rotate(-45deg);
}

.navbar-toggler .navbar-toggler-icon {
  background: var(--white-color);
  transition: background 10ms 300ms ease;
  display: block;
  width: 30px;
  height: 2px;
  position: relative;
}

.navbar-toggler .navbar-toggler-icon:before,
.navbar-toggler .navbar-toggler-icon:after {
  transition: top 300ms 350ms ease, -webkit-transform 300ms 50ms ease;
  transition: top 300ms 350ms ease, transform 300ms 50ms ease;
  transition: top 300ms 350ms ease, transform 300ms 50ms ease, -webkit-transform 300ms 50ms ease;
  position: absolute;
  right: 0;
  left: 0;
  background: var(--white-color);
  width: 30px;
  height: 2px;
  content: '';
}

.navbar-toggler .navbar-toggler-icon::before {
  top: -8px;
}

.navbar-toggler .navbar-toggler-icon::after {
  top: 8px;
}


/*---------------------------------------
  HIGHLIGHT              
-----------------------------------------*/
.highlight {
  background: var(--navbar-bg-color);
  padding-bottom: 16px;
}

.highlight-thumb {
  position: relative;
  overflow: hidden;
  margin-top: 24px;
  margin-bottom: 24px;
}

.highlight-thumb::after {
  content: "";
  background: rgba(0, 0, 0, 0.45);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.highlight-thumb:hover .highlight-title {
  opacity: 0;
  visibility: hidden;
}

.highlight-thumb:hover .highlight-icon {
  opacity: 1;
  visibility: visible;
}

.highlight-thumb:hover .highlight-image {
  transform: scale(1.2);
}

.highlight-info {
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  text-align: center;
}

.highlight-image {
  display: block;
  width: 100%;
  transition: transform 2s;
}

.highlight-title {
  color: var(--white-color);
  transition: opacity 1s;
  margin-bottom: 0;
}

.highlight-icon {
  color: var(--highlight-icon-color);
  font-size: var(--h1-font-size);
  opacity: 0;
  transition: transform 1s;
  visibility: hidden;
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.highlight-icon:hover {
  color: var(--white-color);
}


/*---------------------------------------
  HERO              
-----------------------------------------*/
.hero {
  position: relative;
  height: calc(90vh - 85px);
}

.hero::after {
  content: "";
  background: rgba(0, 0, 0, 0) linear-gradient(rgba(39, 48, 83, 0.1) 0%, rgb(39, 48, 83) 100%) repeat scroll 0% 0%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-bottom: -5px;
}

.hero-text {
  position: absolute;
  z-index: 2;
  top: 53%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.hero-text h1{
  font-size: 58px !important;
  font-weight: 800;
}

.hero-text p{
  color: var(--white-color);
  margin: -10px 0px;
  font-size: 15px;
  font-weight: 300;
  line-height: 1.45;
  margin-bottom: 45px;
}


.hero-sobre {
  position: relative;
  background: url('../images/bg-sobre.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: calc(50vh - 85px);
}

.hero-sobre::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-bottom: -5px;
}

.hero-sobre-text {
  position: absolute;
  z-index: 2;
  top: 53%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}
/* ... */

